Refacto parameter resolver